Updates to class relations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/firstdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/p3test
 spring.datasource.username=postgres
 spring.datasource.password=sebubu
 spring.jpa.hibernate.ddl-auto=update
