Init data for DB
Changed DB setup to initiate with preset data for testing. Will be evolved when classes attributes and relations are done!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/p3test
-spring.datasource.username=postgres
-spring.datasource.password=sebubu
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/p3db
+spring.datasource.username=p3
+spring.datasource.password=p3
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
