--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/p3db
-spring.datasource.username=p3
-spring.datasource.password=p3
+spring.datasource.username=postgres
+spring.datasource.password=17HOEJtalere
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
