Fixed active profiles
ActiveProfiles added to tests, needed to specify how the temporary DB should act.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
+#Database connection information
 spring.datasource.url=jdbc:postgresql://localhost:5432/p3db
 spring.datasource.username=p3
 spring.datasource.password=p3
+
+#Automatically create tables based on our entity classes(Classes in the Model layer)
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
