Added integration test
Fixed env for testing, will now only start one container instead of reboot a new one each time.

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,11 @@
 
 
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+            <scope>test</scope>
+        </dependency>
 
 
  <dependency>
