--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-graphql</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.graphql-java-kickstart</groupId>
+            <artifactId>graphql-spring-boot-starter</artifactId>
+            <version>6.0.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.graphql</groupId>
