--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Database connection information
-spring.datasource.url=jdbc:postgresql://localhost:5432/p3db
+spring.datasource.url=jdbc:postgresql://localhost:5432/p3
 spring.datasource.username=p3
 spring.datasource.password=p3
 
@@ -7,3 +7,5 @@ spring.datasource.password=p3
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
+
+spring.graphql.cors.allow-credentials=true
