added resource order

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Database connection information
-spring.datasource.url=jdbc:postgresql://localhost:5432/p3
+spring.datasource.url=jdbc:postgresql://localhost:5432/p3db
 spring.datasource.username=p3
 spring.datasource.password=p3
 
