--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
 spring.graphql.cors.allow-credentials=true
+spring.graphql.websocket.path=/graphql
+spring.graphql.schema.printer.enabled=true
