--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,10 @@
             <artifactId>graphql-spring-boot-starter</artifactId>
             <version>6.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.graphql</groupId>
