--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
 spring.graphql.cors.allow-credentials=true
+rsa.private-key=classpath:/certs/private.pem
+rsa.public-key=classpath:/certs/public.pem
+
