--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <version>3.2.3.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
+
 
  <dependency>
             <groupId>org.springframework.boot</groupId>
