--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -6,3 +6,10 @@ spring.sql.init.mode=never
 
 # This is not necessary since we're not initializing the data, but it's here for clarity
 spring.jpa.defer-datasource-initialization=false
+
+
+rsa.private-key=classpath:/certs/private.pem
+rsa.public-key=classpath:/certs/public.pem
+
+spring.graphql.websocket.path=/graphql
+spring.graphql.schema.printer.enabled=true
